  *   - Fixed void pointer arithmetic in the low level and class driver RNDIS demo protocol decoders
  *   - Fixed low level RNDIS demo incorrectly setting the RNDIS state when a null packet filter was requested
  *   - Fixed missing entries in several project's Atmel Studio integration files, such as driver INF files
  *
  *  <b>Changed:</b>
  *   - Added signed alternative libUSB driver for the AVRISP-MKII clone project, to support Atmel Studio 7 (thanks to Atmel)
  *   - Removed no longer required LIBUSB_DRIVER_COMPAT and RESET_TOGGLES_LIBUSB_COMPAT configuration options from the AVRISP-MKII
  *     clone project, as the new libUSB driver works for AVRDUDE and Atmel Studio 7 under Windows
  *
  *  \section Sec_ChangeLog151115 Version 151115
  *  <b>New:</b>
  *   - Added support for the Atmel Xplained-MINI series of development kits
  *   - Added new PROGMEM variant send functions to the CDC class device driver (thanks to Stefan Hellermann)
  *   - Added new PROGMEM variant send functions to the CDC class host driver
  *   - Added additional Arduino Uno board definitions for the main processor reset (thanks to NicoHood)
  *   - Added modified DocBook transforms to generate Atmel Studio 6/7 internal help documentation (thanks to Morten Engelhardt Olsen)
  *
  *  <b>Changed:</b>
  *  - Core:
  *   - The TWI peripheral driver's TWI_WritePacket() and TWI_ReadPacket() functions now takes a 16-bit Length rather than an 8-bit
  *     length, for longer transfers
  *  - Library Applications:
  *   - The CDC, DFU, Mass Storage and Printer class bootloaders will no longer run the user application if the application reset
  *     vector is blank (thanks to Alex Kazik)
  *   - The CDC, DFU and Printer class bootloaders are now compatible with the original Atmel XPLAIN and Arduino Leonardo boards
  *   - The CDC, DFU, Mass Storage and Printer class bootloaders are not compatible with devices with the BOOTRST fuse set and will